REL-286668 unit tests for KeplerSourceProviderInstaller

--- a/Source/kCura.IntegrationPoints.SourceProviderInstaller.Tests/kCura.IntegrationPoints.SourceProviderInstaller.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.SourceProviderInstaller.Tests/kCura.IntegrationPoints.SourceProviderInstaller.Tests.csproj
@@ -42,6 +42,8 @@
       <Link>AssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Internals\Converters\SourceProviderExtensionsTests.cs" />
+    <Compile Include="Internals\KeplerRequestHelperTests.cs" />
+    <Compile Include="Internals\KeplerSourceProviderInstallerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="paket.references" />
@@ -63,12 +65,12 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\.paket\paket.targets" />
   <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
     <Analyzer Include="..\..\packages\CSharpGuidelineAnalyzer\analyzers\dotnet\cs\CSharpGuidelineAnalyzer.dll">
       <Paket>True</Paket>
     </Analyzer>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
   </ItemGroup>
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6.2'">
@@ -91,6 +93,17 @@
       <ItemGroup>
         <Reference Include="kCura.EventHandler">
           <HintPath>..\..\packages\kCura.EventHandler\lib\net462\kCura.EventHandler.dll</HintPath>
+          <Private>True</Private>
+          <Paket>True</Paket>
+        </Reference>
+      </ItemGroup>
+    </When>
+  </Choose>
+  <Choose>
+    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6.2'">
+      <ItemGroup>
+        <Reference Include="Moq">
+          <HintPath>..\..\packages\Moq\lib\net45\Moq.dll</HintPath>
           <Private>True</Private>
           <Paket>True</Paket>
         </Reference>
