REL-304683 [SYNC] Remove integration tests dependency from system tests

--- a/Source/Relativity.Sync.Tests.Common/Relativity.Sync.Tests.Common.csproj
+++ b/Source/Relativity.Sync.Tests.Common/Relativity.Sync.Tests.Common.csproj
@@ -12,8 +12,18 @@
   </PropertyGroup>
   <Import Project="..\..\scripts\Build.AssemblyInfo.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\Relativity.Sync.Tests.Common\Relativity.Sync.Tests.Common.csproj" />
     <ProjectReference Include="..\Relativity.Sync\Relativity.Sync.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+    </AssemblyAttribute>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Relativity.Sync.Tests.Integration</_Parameter1>
+    </AssemblyAttribute>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Relativity.Sync.Tests.System</_Parameter1>
+    </AssemblyAttribute>
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
