--- a/Source/Relativity.Sync.Tests.System/Relativity.Sync.Tests.System.csproj
+++ b/Source/Relativity.Sync.Tests.System/Relativity.Sync.Tests.System.csproj
@@ -12,7 +12,7 @@
 	</PropertyGroup>
 	<Import Project="..\..\scripts\Build.AssemblyInfo.targets" />
 	<ItemGroup>
-		<ProjectReference Include="..\Relativity.Sync.Tests.Integration\Relativity.Sync.Tests.Integration.csproj" />
+		<ProjectReference Include="..\Relativity.Sync.Tests.Common\Relativity.Sync.Tests.Common.csproj" />
 		<ProjectReference Include="..\Relativity.Sync\Relativity.Sync.csproj" />
 	</ItemGroup>
 	<ItemGroup>
