REL-286668 created event handler for DestinationProvider registration

--- a/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Services\IntegrationPointServiceTests.cs" />
     <Compile Include="Services\JobHistory\JobHistoryErrorServiceTest.cs" />
     <Compile Include="Services\JobHistory\JobHistoryServiceTests.cs" />
+    <Compile Include="Services\Synchronizer\RdoSynchronizerProviderTests.cs" />
     <Compile Include="Tagging\TaggerTests.cs" />
     <Compile Include="Tagging\TagSavedSearchFolderTests.cs" />
     <Compile Include="Tagging\TagSavedSearchManagerTests.cs" />
