REL-298092 repository unit tests moved to correct folder

--- a/Source/kCura.IntegrationPoints.Data.Tests/kCura.IntegrationPoints.Data.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Data.Tests/kCura.IntegrationPoints.Data.Tests.csproj
@@ -132,24 +132,24 @@
     <Compile Include="Facades\Implementations\TestCases\CollectionFieldValueTestCases.cs" />
     <Compile Include="Helpers\MatchHelper.cs" />
     <Compile Include="Installers\RepositoryRegistrationTests.cs" />
-    <Compile Include="Repositories\AuditRepositoryTests.cs" />
-    <Compile Include="Repositories\CaseRepositoryTests.cs" />
-    <Compile Include="Repositories\FieldRepositoryTests.cs" />
-    <Compile Include="Repositories\FoundationRepositoryFactoryTests.cs" />
-    <Compile Include="Repositories\Impementatons\RelativityObjectManagerTests.cs" />
-    <Compile Include="Repositories\IntegrationPointRepositoryTests.cs" />
-    <Compile Include="Repositories\KeplerInstanceSettingRepositoryTests.cs" />
-    <Compile Include="Repositories\ProductionRepositoryTests.cs" />
-    <Compile Include="Repositories\KeplerKeywordSearchRepositoryTests.cs" />
-    <Compile Include="Repositories\QueryFieldLookupRepositoryTests.cs" />
-    <Compile Include="Repositories\SavedSearchQueryRepositoryTests.cs" />
-    <Compile Include="Repositories\SourceJobRepositoryTests.cs" />
-    <Compile Include="Repositories\SourceWorkspaceRepositoryTests.cs" />
+    <Compile Include="Repositories\Implementations\AuditRepositoryTests.cs" />
+    <Compile Include="Repositories\Implementations\CaseRepositoryTests.cs" />
+    <Compile Include="Repositories\Implementations\FieldRepositoryTests.cs" />
+    <Compile Include="Repositories\Implementations\FoundationRepositoryFactoryTests.cs" />
+    <Compile Include="Repositories\Implementations\RelativityObjectManagerTests.cs" />
+    <Compile Include="Repositories\Implementations\IntegrationPointRepositoryTests.cs" />
+    <Compile Include="Repositories\Implementations\KeplerInstanceSettingRepositoryTests.cs" />
+    <Compile Include="Repositories\Implementations\ProductionRepositoryTests.cs" />
+    <Compile Include="Repositories\Implementations\KeplerKeywordSearchRepositoryTests.cs" />
+    <Compile Include="Repositories\Implementations\QueryFieldLookupRepositoryTests.cs" />
+    <Compile Include="Repositories\Implementations\SavedSearchQueryRepositoryTests.cs" />
+    <Compile Include="Repositories\Implementations\SourceJobRepositoryTests.cs" />
+    <Compile Include="Repositories\Implementations\SourceWorkspaceRepositoryTests.cs" />
     <Compile Include="RetryHandlerFactoryTests.cs" />
     <Compile Include="RetryHandlerTests.cs" />
     <Compile Include="RSAPIClient\RsapiClientWrapperWithLoggingTests.cs" />
     <Compile Include="SecretStore\SecretManagerTests.cs" />
-    <Compile Include="Repositories\KeplerWorkspaceRepositoryTests.cs" />
+    <Compile Include="Repositories\Implementations\KeplerWorkspaceRepositoryTests.cs" />
     <Compile Include="Statistics\DocumentTotalStatisticsTests.cs" />
     <Compile Include="Statistics\ImageFileSizeStatisticsTests.cs" />
     <Compile Include="Statistics\ImageTotalStatisticsTests.cs" />
@@ -159,9 +159,9 @@
     <Compile Include="BaseRdoTests.cs" />
     <Compile Include="PermissionServiceTest.cs" />
     <Compile Include="RelativityReaderBaseTests.cs" />
-    <Compile Include="Repositories\JobHistoryErrorRepositoryTests.cs" />
-    <Compile Include="Repositories\PermissionRepositoryTests.cs" />
-    <Compile Include="Repositories\KeplerArtifactGuidRepositoryTests.cs" />
+    <Compile Include="Repositories\Implementations\JobHistoryErrorRepositoryTests.cs" />
+    <Compile Include="Repositories\Implementations\PermissionRepositoryTests.cs" />
+    <Compile Include="Repositories\Implementations\KeplerArtifactGuidRepositoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
