--- a/scripts/Build.Sign.targets
+++ b/scripts/Build.Sign.targets
@@ -3,6 +3,6 @@
     <Target Name="Sign" Condition="'$(CertificateThumbprint)' != '' AND '$(SignToolPath)' != ''" AfterTargets="Build">
         <Message Text="Signing $(OutputPath)$(AssemblyName).dll" />
         <Message Text="Usign tool from $(SignToolPath)" />
-        <Exec Command="&quot;$(SignToolPath)&quot; sign /sha1 $(CertificateThumbprint) /t http://timestamp.comodoca.com/authenticode /d Relativity /du http://www.relativity.com $(OutputPath)$(AssemblyName).dll" />
+        <Exec Command="&quot;$(SignToolPath)&quot; sign /sha1 $(CertificateThumbprint) /t http://timestamp.digicert.com /d Relativity /du http://www.relativity.com $(OutputPath)$(AssemblyName).dll" />
     </Target>
 </Project>
