--- a/Source/kCura.IntegrationPoints.SourceProviderInstaller.Tests/kCura.IntegrationPoints.SourceProviderInstaller.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.SourceProviderInstaller.Tests/kCura.IntegrationPoints.SourceProviderInstaller.Tests.csproj
@@ -44,6 +44,7 @@
     <Compile Include="IntegrationPointSourceProviderInstallerTests.cs" />
     <Compile Include="IntegrationPointSourceProviderUninstallerTests.cs" />
     <Compile Include="Internals\Converters\SourceProviderExtensionsTests.cs" />
+    <Compile Include="Internals\IntegrationPointSourceProviderUninstallerInternalTests.cs" />
     <Compile Include="Internals\KeplerRequestHelperTests.cs" />
     <Compile Include="Internals\KeplerSourceProviderInstallerTests.cs" />
   </ItemGroup>
