--- a/Source/kCura.IntegrationPoints.SourceProviderInstaller/kCura.IntegrationPoints.SourceProviderInstaller.csproj
+++ b/Source/kCura.IntegrationPoints.SourceProviderInstaller/kCura.IntegrationPoints.SourceProviderInstaller.csproj
@@ -56,6 +56,10 @@
     <Compile Include="IntegrationPointSourceProviderUninstaller.cs" />
     <Compile Include="IntegrationPointSourceProviderInstaller.cs" />
     <Compile Include="Internals\Converters\SourceProviderExtensions.cs" />
+    <Compile Include="Internals\IKeplerRequestHelper.cs" />
+    <Compile Include="Internals\IntegrationPointSourceProviderInstallerInternal.cs" />
+    <Compile Include="Internals\IntegrationPointSourceProviderUninstallerInternal.cs" />
+    <Compile Include="Internals\ISourceProviderInstaller.cs" />
     <Compile Include="Internals\KeplerRequestHelper.cs" />
     <Compile Include="InvalidSourceProviderException.cs" />
     <Compile Include="Internals\KeplerSourceProviderInstaller.cs" />
