--- a/Source/Rip.SystemTests/Rip.SystemTests.csproj
+++ b/Source/Rip.SystemTests/Rip.SystemTests.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Utilities\FieldMappingBuilder.cs" />
+    <Compile Include="Utilities\IntegrationPointModelBuilder.cs" />
     <Content Include="LICENSE.txt">
       <Paket>True</Paket>
     </Content>
@@ -52,7 +54,9 @@
     <Compile Include="SystemTestsFixture.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
+    <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="paket.references" />
