--- a/Source/kCura.IntegrationPoints.SourceProviderInstaller.Tests/kCura.IntegrationPoints.SourceProviderInstaller.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.SourceProviderInstaller.Tests/kCura.IntegrationPoints.SourceProviderInstaller.Tests.csproj
@@ -135,4 +135,15 @@
       </ItemGroup>
     </When>
   </Choose>
+  <Choose>
+    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6.2'">
+      <ItemGroup>
+        <Reference Include="Relativity.Kepler">
+          <HintPath>..\..\packages\Relativity.Kepler\lib\net462\Relativity.Kepler.dll</HintPath>
+          <Private>True</Private>
+          <Paket>True</Paket>
+        </Reference>
+      </ItemGroup>
+    </When>
+  </Choose>
 </Project>
