REL-307987 - Substuted TestDBContext for mock

--- a/Source/kCura.ScheduleQueue.Core.Tests.Integration/kCura.ScheduleQueue.Core.Tests.Integration.csproj
+++ b/Source/kCura.ScheduleQueue.Core.Tests.Integration/kCura.ScheduleQueue.Core.Tests.Integration.csproj
@@ -55,7 +55,6 @@
       <Link>AssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Service\JobServiceTests.cs" />
-    <Compile Include="TestDBContextHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
@@ -86,7 +85,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent></PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <Import Project="..\..\.paket\paket.targets" />
   <Choose>
