--- a/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
+++ b/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
@@ -69,6 +69,7 @@
     <Compile Include="AuditHelper.cs" />
     <Compile Include="ClaimsPrincipalFactory.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="DBContextMockBuilder.cs" />
     <Compile Include="DocumentService.cs" />
     <Compile Include="DocumentTestDataBuilder.cs" />
     <Compile Include="EHHelper.cs" />
@@ -147,7 +148,6 @@
     <Compile Include="TestCategories\Attributes\SmokeTestAttribute.cs" />
     <Compile Include="TestCategories\TestCategories.cs" />
     <Compile Include="TestCategories\Attributes\TestInQuarantineAttribute.cs" />
-    <Compile Include="TestDbContext.cs" />
     <Compile Include="Exceptions\TestException.cs" />
     <Compile Include="Permission.cs" />
     <Compile Include="Import.cs" />
