Redesigned StreamLongText in RelativityObjectManager wrapper to use self-recreating and self-disposing stream wrappers

--- a/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
+++ b/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
@@ -237,6 +237,9 @@
     <Compile Include="Extensions\ChoiceExtensions.cs" />
     <Compile Include="GetArtifactForMassAction.cs" />
     <Compile Include="IEddsDBContext.cs" />
+    <Compile Include="StreamWrappers\AsciiToUnicodeStream.cs" />
+    <Compile Include="StreamWrappers\SelfDisposingStream.cs" />
+    <Compile Include="StreamWrappers\SelfRecreatingStream.cs" />
     <Compile Include="WorkspaceContext.cs" />
     <Compile Include="Extensions\DBContextExtensions.cs" />
     <Compile Include="GetObjectBase.cs" />
