--- a/Source/kCura.IntegrationPoints.Data.Tests/kCura.IntegrationPoints.Data.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Data.Tests/kCura.IntegrationPoints.Data.Tests.csproj
@@ -136,7 +136,7 @@
     <Compile Include="Repositories\CaseRepositoryTests.cs" />
     <Compile Include="Repositories\FieldRepositoryTests.cs" />
     <Compile Include="Repositories\FoundationRepositoryFactoryTests.cs" />
-    <Compile Include="Repositories\Impementatons\RelativityObjectManagerTests.cs" />
+    <Compile Include="Repositories\Implementations\RelativityObjectManagerTests.cs" />
     <Compile Include="Repositories\IntegrationPointRepositoryTests.cs" />
     <Compile Include="Repositories\KeplerInstanceSettingRepositoryTests.cs" />
     <Compile Include="Repositories\ProductionRepositoryTests.cs" />
@@ -162,6 +162,7 @@
     <Compile Include="Repositories\JobHistoryErrorRepositoryTests.cs" />
     <Compile Include="Repositories\PermissionRepositoryTests.cs" />
     <Compile Include="Repositories\KeplerArtifactGuidRepositoryTests.cs" />
+    <Compile Include="StreamWrappers\AsciiToUnicodeStreamTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
